<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_account"
        android:orderInCategory="100"
        android:title="@string/action_account"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="200"
        android:title="@string/action_sign_out"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_register"
        android:orderInCategory="300"
        android:title="@string/action_register"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_contact"
        android:title="@string/contact"
        android:orderInCategory="400"
        app:showAsAction="never"/>
</menu>
