<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/container"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:background="@drawable/cardboard_texture"
            android:gravity="center">

            <android.support.v7.widget.CardView
                android:id="@+id/image_container"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:backgroundTint="#fff"
                android:elevation="@dimen/cardview_default_elevation">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/content_description_do_it_yourself_image"
                    android:minHeight="96dp"
                    android:minWidth="96dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_add_a_photo_transparent_gray_24dp" />

            </android.support.v7.widget.CardView>

        </LinearLayout>


        <LinearLayout
            android:background="@android:color/white"
            android:id="@+id/description_container"
            android:layout_width="match_parent"
            android:layout_weight="50"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/label_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_description" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/hint_diy_description"
                android:labelFor="@id/label_description" />

            <EditText
                android:inputType="none"
                android:background="@android:color/transparent"
                android:id="@+id/edit_description"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@+id/description_container"
        app:layout_anchorGravity="right"
        app:srcCompat="@drawable/ic_edit_white_24dp" />

</android.support.design.widget.CoordinatorLayout>